# Shutter

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
ShutterEngine/: App.cpp  App.h  CMakeLists.txt
ShutterEngine/Engine/: Camera.cpp  Camera.h  CubeTexture.cpp  CubeTexture.h  Frustrum.cpp  Frustrum.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  SceneObject.h  Texture.cpp  Texture.h
ShutterEngine/GUI/: ControlsWidget.cpp  GUI.cpp  GUI.h  PerformanceWidget.cpp  SceneTreeWidget.cpp  Widgets.h
ShutterEngine/Renderer/: Buffer.cpp  Buffer.h  Cubemap.cpp  Cubemap.h  DeviceHandler.cpp  DeviceHandler.h  Extensions.cpp  Extensions.h  GUI.cpp  GUI.h  Helpers.h  Image.cpp  Image.h  Layers.cpp  Layers.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h  Surface.cpp  Surface.h
Tools/: main.cpp
